@@ -1,5 +1,10 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
+
+  *) core: Fix directives like LogLevel that need to know if they are invoked
+     at virtual host context or in Directory/Files/Location/If sections to
+     work properly in If sections that are not in a Directory/Files/Location.
+     [Stefan Fritsch]
  
   *) mod_cache_disk: Resolve errors while revalidating disk-cached files on 
      Windows ("...rename tempfile to datafile failed..."). PR 38827
